gumiho-mudang-scope/scope-core/tests/snapshots/malformed_sources/java__eof-in-annotation.snap
---
source: gumiho-mudang-scope/scope-core/tests/malformed_sources.rs
expression: snapshot_data
---
[
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 9,
        end_line: 15,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 10,
        end_line: 14,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 11,
        end_line: 11,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 11,
        end_line: 11,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 11,
        end_line: 11,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 14,
        end_line: 14,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 14,
        end_line: 14,
    },
    SkippedRangeRepr {
        reason: "tree_sitter_error:syntax_error",
        start_line: 14,
        end_line: 14,
    },
]
